# bees

./: .gitignore  CMakeLists.txt  Defines.mk  Dockerfile_buildx_deb  Makefile  README.md  makeflags  meson.build  meson_options.txt
contrib/gentoo/: bees-9999.ebuild
contrib/gentoo-bees/metadata/: layout.conf
contrib/gentoo-bees/profiles/: repo_name
contrib/gentoo-bees/sys-fs/bees/: Manifest  bees-9999.ebuild  metadata.xml
contrib/gentoo/files/: v0.5-gentoo_build.patch
docs/: Makefile  beestop-roadmap.md  btrfs-kernel.md  btrfs-other.md  config.md  event-counters.md  gotchas.md  how-it-works.md  index.md  index.py  install.md  meson.build  missing.md  options.md  running.md  wrong.md
include/crucible/: backtrace.h  bencode.h  bool.h  btrfs-tree.h  btrfs.h  bytevector.h  cache.h  chatter.h  city.h  cleanup.h  crc64.h  endian.h  error.h  execpipe.h  extentwalker.h  fd.h  fs.h  hexdump.h  interp.h  limits.h  lockset.h  multilock.h  namedptr.h  ntoa.h  openat2.h  path.h  pool.h  process.h  progress.h  resource.h  seeker.h  spanner.h  string.h  table.h  task.h  time.h  timequeue.h  uname.h  uuid.h  version.h  (+1 more)
lib/: .gitignore  Makefile  btrfs-tree.cc  bytevector.cc  chatter.cc  city.cc  cleanup.cc  configure.h.in  crc64.cc  error.cc  execpipe.cc  extentwalker.cc  fd.cc  fs.cc  interp.cc  meson.build  multilock.cc  ntoa.cc  openat2.cc  path.cc  process.cc  seeker.cc  string.cc  table.cc  task.cc  time.cc  uname.cc  uuid.cc  version.cc.in
scripts/: bees.confd.in  bees.initd.in  beesd  beesd.conf.sample  beesd.in  beesd@.service  beesd@.service.in  meson.build
src/: .gitignore  Makefile  bees-context.cc  bees-fwd.h  bees-hash.cc  bees-resolve.cc  bees-roots.cc  bees-tempfile.h  bees-thread.cc  bees-trace.cc  bees-types.cc  bees-usage.py  bees-usage.txt  bees-version.c.in  bees.cc  bees.h  btrsame.cc  clone-cat.cc  clone-split.cc  fanotify-watch.cc  fiemap.cc  fiewalk.cc  meson.build
test/: .gitignore  Makefile  chatter.cc  crc64.cc  execpipe.cc  fd.cc  interp.cc  limits.cc  meson.build  namedptr.cc  path.cc  process.cc  progress.cc  seeker.cc  table.cc  task.cc  test-snapshot-dedup.cc  tests.h
