option('docs', type: 'feature', value: 'auto',
  description: 'Build HTML documentation from Markdown source')
option('systemd', type: 'feature', value: 'auto',
  description: 'Install systemd unit files')
option('tools', type: 'boolean', value: false,
  description: 'Install fiemap and fiewalk helper tools')
